# ARPCompression

./: Curved_format_vs_baselines__compare_sizes_csv_.csv  LICENSE  README.md  cmc_bias.txt  cmc_rd.csv  ml_entropy_bound.csv  paragraph.atcp2  pyproject.toml
.github/: FUNDING.yml
ARPCompression-FEC-Quantum/: README_EXPORTER_SNIPPET.md  README_FEC_SNIPPET.md
ARPCompression-FEC-Quantum/artifacts/: fec_bench_results.csv
ARPCompression-FEC-Quantum/bench/: fec_bench.py
ARPCompression-FEC-Quantum/pathtext/: fec.py
ARPCompression-FEC-Quantum/tools/: export_atcp3.py
atc/: arith.py  atc_ac_ctx_sizes.csv  atc_ac_sizes.csv  atc_ac_sizes_v2.csv  atc_bitpack_sizes.csv  atc_pack_sizes.csv  bench_results.csv  bitpack.py  cli.py  codec_ac.py  codec_simple.py  compress.py  decoder.py  decompress.py  encoder.py  packer.py  rc.py  utils.py
bench/: bench_results.csv  plot_bench.py  run_bench.py
bench/samples/: chat.txt  code.txt  english.txt  paragraph.txt  short.txt
cmc/: cmc_rd_sweep.py
gpuc/: gpuc_snr.csv  gpuc_snr_sparse.csv
pathtext/: ML_ENTROPY_README_SNIPPET.md  binfmt.py  compress_paths.py  demo.atcp.json  demo.py  dict.py  dictify.py  encode.py  iter_milestones.csv  make_sine.py  pack_bin.py  paragraph.atcp.json  paragraph_dict.atcp.json  paragraph_dict.atcp2  pathtext.py  render.py  render_bin.py
