[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atc"
version = "0.1.0"
description = "Adaptive Text Compression prototype (overlay style bits per character)"
authors = [{name = "RDM3DC"}]
readme = "README.md"
requires-python = ">=3.8"


[project.scripts]
atc-encode = "atc.cli:encode_main"
atc-decode = "atc.cli:decode_main"
